# ai-voice-assistant-fastrtc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
.opencode/command/: fix-bug.md
.specify/memory/: constitution.md
docs/: project-plan.md
models/: README.md
scripts/: download_models.py  test_flow.py  test_pipeline_offline.py
specs/000-ai-voice-assistant/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-fastrtc-voice-pipeline/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-weather-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-exchange-rate-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-stock-price-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-realtime-conversation-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-langgraph-travel-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-multi-agent-collaboration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-role-switching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/voice_assistant/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_exchange_rate.py  mock_responses.py  mock_tool.py  mock_weather.py
tests/integration/: test_ui_role_switch.py  test_voice_commands.py
tests/smoke/: __init__.py  test_smoke.py
tests/unit/: __init__.py  test_llm_client.py  (+6 more)
(+101 files in other folders)
